DDF 1776 Fix css bugs introduced by ddf-1463.
- fix rule causing layout problem.
- refactor css.

--- a/catalog/ui/search-ui/standard/src/main/webapp/css/style.css
+++ b/catalog/ui/search-ui/standard/src/main/webapp/css/style.css
@@ -94,180 +94,3 @@
 .banner-text-black {
     color: black;
 }
-
-.ui-sortable-helper {
-    display: table;
-}
-
-.sortHandle {
-    cursor: pointer;
-}
-
-#layerPickers table.scrollable {
-    width: 100%;
-}
-
-#layerPickers .fa {
-    transform: scale(2, 1.3);
-}
-
-#layerPickers .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-    padding: 2px;
-    vertical-align: middle;
-}
-
-#layerPickers tbody {
-    /*
-     overflow:auto and white-space:nowrap make the tbody "scrollable",
-     which fixes a bug in the jquery-ui sortable, which calculates
-     the position of the sortable "helper" (cloned row that gets
-     dragged) based upon the return of $.scrollParent().
-
-     when the table is not made "scrollable", scrollParent() goes up the
-     DOM ancestors until if finds some scrollable container. The bug effect
-     is that the initial drag/drop makes the helper "jump" way outside
-     the tbody.
-
-     reference:
-     https://developer.mozilla.org/en-US/docs/Web/CSS/overflow?redirectlocale=en-US&redirectslug=CSS%2Foverflow
-
-     */
-    overflow: scroll;
-    white-space: nowrap;
-}
-
-#layerPickers thead {
-    display: table-header-group;
-}
-
-#layerPickers thead th, tr td {
-    text-align: center;
-}
-
-#layerPickers .layerPickerHelper {
-    background-color: #393939;
-}
-
-div.modal-body div.preferenceTabButtons {
-    text-align: right;
-}
-
-#layerPickerMap {
-    height: 350px;
-}
-
-/*
-    the following input range styling taken from:
-    https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/
-
-    Styling input range is "tricky... because it requires a weird mix of normal
-    standardized selectors and properties and non-standard and prefixed selectors
-    and properties."
-*/
-input[type=range] {
-    -webkit-appearance: none;
-    width: 100%;
-}
-
-input[type=range]:focus {
-    outline: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 8.4px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background: #3071a9;
-    border-radius: 1.3px;
-    border: 0.2px solid #010101;
-}
-
-input[type=range]::-webkit-slider-thumb {
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 16px;
-    width: 16px;
-    border-radius: 3px;
-    background: #ffffff;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -4px; /* account for webkit user agent stylesheet default */
-}
-
-input[type=range]:disabled::-webkit-slider-runnable-track {
-    background: white;
-}
-
-input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #367ebd;
-}
-
-input[type=range]::-moz-range-track {
-    width: 100%;
-    height: 8.4px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    background: #3071a9;
-    border-radius: 1.3px;
-    border: 0.2px solid #010101;
-}
-
-input[type=range]:disabled::-moz-range-track {
-    background: white;
-}
-
-input[type=range]::-moz-range-thumb {
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 16px;
-    width: 16px;
-    border-radius: 3px;
-    background: #ffffff;
-    cursor: pointer;
-}
-
-input[type=range]::-ms-track {
-    width: 100%;
-    height: 8.4px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    border-width: 16px 0;
-    color: transparent;
-}
-
-input[type=range]::-ms-fill-lower {
-    background: #2a6495;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-
-input[type=range]::-ms-fill-upper {
-    background: #3071a9;
-    border: 0.2px solid #010101;
-    border-radius: 2.6px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-
-input[type=range]::-ms-thumb {
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-    border: 1px solid #000000;
-    height: 16px;
-    width: 16px;
-    border-radius: 3px;
-    background: #ffffff;
-    cursor: pointer;
-}
-
-input[type=range]:focus::-ms-fill-lower {
-    background: #3071a9;
-}
-
-input[type=range]:focus::-ms-fill-upper {
-    background: #367ebd;
-}
